# elbow-grease

./: .env.example  .gitignore  .vercelignore  ARCHITECTURE.md  CHANGES.md  MIGRATION_REPORT.md  MORNING_NOTES.md  README.md  REFERENCE.md  RELEASING.md  SECURITY.md  blog.html  build-release.bat  build-release.ps1  eslint.config.js  hurricane-uplift.html  index.html  launch-app.bat  launch.ps1  orlando-roofing.html  oviedo-roofing.html  oviedo-storm-damage.html  package-lock.json  package.json  server.cjs  start-dev-server.bat  tsconfig.json  tsconfig.node.json  vercel.json  vite.config.ts  winter-park-roofing.html
.claude/: launch.json
api/: csp-report.ts  events.ts  health.ts  leads.ts
docs/: analytics-events.md  before-after-todo.md  blog-content-plan.md  blog-photo-todo.md  build-summary-tier1to8.md  citations-master-list.md  citations-tracker.csv  city-photo-todo.md  domain-recovery-runbook.md  experiments.md  github-release-automation.md  google-business-profile-setup.md  hostinger-github-setup-guide.md  hostinger-release-checklist.md  lead-routing.md  ops-runbook.md  orlando-photo-todo.md  performance-baseline.md  photo-pipeline.md  pipe-geometry-conventions.md  projects-photo-todo.md  review-request-templates.md  search-console-setup.md  seo-rollout-summary.md  vercel-production-setup.md
public/: .htaccess  accessibility.html  manifest.webmanifest  offline.html  privacy.html  robots.txt  sitemap.xml  sw.js  terms.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
(+961 files in other folders)
