[package]
name = "elbow-grease"
version = "0.1.0"
description = "Videogame-styled plumbing CAD + estimator for Windows"
authors = ["Beit Building Contractors LLC"]
license = "Proprietary"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
# Self-update infrastructure. `updater` fetches + verifies + installs the
# signed release bundle; `process` exposes `relaunch()` so the app can
# restart itself cleanly once the installer finishes.
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
# Phase 2: the ComplianceDebugger uses the shell plugin to open IPC
# deep-links (up.codes) in the system browser instead of in-webview.
tauri-plugin-shell = "2"
# Phase 4: crash-safe project bundles require real filesystem access
# (atomic rename, fsync, directory listing). localStorage alone can't
# provide durability guarantees.
tauri-plugin-fs = "2"
# Phase 11.D: native open/save dialogs for .elbow bundles. The browser
# fallback (Blob download + hidden file input) still works, but in
# Tauri we get OS-native path-based persistence + "Recent Files".
tauri-plugin-dialog = "2"
